--- a/protokolle/2024-10-16_sitzung.md
+++ b/protokolle/2024-10-16_sitzung.md
@@ -40,6 +40,11 @@
 ## 3. Titel für Vortrag
 ### Brainstorming Ideen
 - Ein nachhaltiges, demokratisches Internet
+- Ein demokratisches, nachhaltiges Internet
+- Ein demokratisches und(?) nachhaltiges Internet
+- Demokratisches Internet und Nachhaltigkeit
+- Demokratisches Internet und Klima
+- Klimaaspekte eines demokratischen Internets
 
 
 ## 4. Aufgabenverteilung
