--- a/protokolle/2024-10-16_sitzung.md
+++ b/protokolle/2024-10-16_sitzung.md
@@ -37,6 +37,23 @@
 -- Tracken aller Berechnungen + CO2-Äquivalent
 - Digitalisierung löst Probleme, die sie selber geschaffen hat (Globalisierung)
 
+### Gliederung
+1. Demokratisches Internet
+- Dezentralität
+- Fediverse
+2. Klimaaspekte des Internets
+- Stromverbrauch Datenzentren
+- CO2-Äquivalent Streaming/Nachrichten
+- (Wie kann ich mein Online-Verhalten nachhaltiger gestalten?)
+3. Klimaaspekte des dezentralen Internets
+- Stromfresser Bitcoin
+- CO2-Äquivalent Nachricht im Fediverse
+- Vor- und Nachteile Dezentralität
+4. Strom und Klima
+- Klimaneutraler Strom für Datenzentren
+- Synnergie-Effekte (Abwärme von Rechenzentren, Überschussstrom, ...)
+5. Fazit
+
 ## 3. Titel für Vortrag
 ### Brainstorming Ideen
 - Ein nachhaltiges, demokratisches Internet
