--- a/protokolle/2024-10-16_sitzung.md
+++ b/protokolle/2024-10-16_sitzung.md
@@ -38,8 +38,11 @@
 - Digitalisierung löst Probleme, die sie selber geschaffen hat (Globalisierung)
 
 ### Gliederung
-1. Demokratisches Internet
+1. Demokratisches <Internet>
+- Was mach Internet demokratisch oder nicht?
 - Dezentralität
+-- Ursprüngliche Idee
+-- Torrenting
 - Fediverse
 2. Klimaaspekte des Internets
 - Stromverbrauch Datenzentren
@@ -48,6 +51,7 @@
 3. Klimaaspekte des dezentralen Internets
 - Stromfresser Bitcoin
 - CO2-Äquivalent Nachricht im Fediverse
+-- Stromverbrauch Mastodon-Server?
 - Vor- und Nachteile Dezentralität
 4. Strom und Klima
 - Klimaneutraler Strom für Datenzentren
