--- a/protokolle/2024-10-16_sitzung.md
+++ b/protokolle/2024-10-16_sitzung.md
@@ -12,37 +12,38 @@
 
 ## 2. Gliederung für Vortrag
 ### Brainstorming Ideen
+
 - Selbstdarstellung von Unternehmen bzgl. Nachhaltigkeit (@Patrick)
--- Kritik am SBTi Standard
--- Größte deutsche Tech-Unternehmen: SAP, Telekom, Infineon
--- Beyond Greenwashing: was steckt dahinter
+   - Kritik am SBTi Standard
+   - Größte deutsche Tech-Unternehmen: SAP, Telekom, Infineon
+   - Beyond Greenwashing: was steckt dahinter
 - Individueller Datenverkehr 
--- Streaming Stromverbrauch
--- Wie wirkt sich mein Verhalten auf den CO2 Abdruck aus?
--- Ziele der Anbieter*innen
--- Watchtime -> Grünere Maße
--- Jellyfin (Torrent)
--- Earn-per-use-Modelle
+   - Streaming Stromverbrauch
+   - Wie wirkt sich mein Verhalten auf den CO2 Abdruck aus?
+   - Ziele der Anbieter*innen
+   - Watchtime -> Grünere Maße
+   - Jellyfin (Torrent)
+   - Earn-per-use-Modelle
 - Wie nachhaltig ist Dezentralität? (Fediverse und co.)
--- Geschichte des Internets: vom Dezentralität zu Zentralität (zu Dezentralität?)
--- Vergleich CO2 pro Nachricht: Zentral (z.B. Instagram), Dezentral (z.B. Fediverse, Bitcoin -> vgl. herkömmliches Geldsystem)
--- Vor- Nachteile Dezentralität
--- Demokratisches, Nachhaltiges Internet
+   - Geschichte des Internets: vom Dezentralität zu Zentralität (zu Dezentralität?)
+   - Vergleich CO2 pro Nachricht: Zentral (z.B. Instagram), Dezentral (z.B. Fediverse, Bitcoin -> vgl. herkömmliches Geldsystem)
+   - Vor- Nachteile Dezentralität
+   - Demokratisches, Nachhaltiges Internet
 - Wo kommt die Energie her?
--- Synnergie-Effekte
--- Abwärme von Rechenzentren
+   - Synnergie-Effekte
+   - Abwärme von Rechenzentren
 - Effizienz vs. Effektivität
--- Instanzgröße wächst mit Effizienz
+   - Instanzgröße wächst mit Effizienz
 - Grünere Informatik
--- Tracken aller Berechnungen + CO2-Äquivalent
+   - Tracken aller Berechnungen + CO2-Äquivalent
 - Digitalisierung löst Probleme, die sie selber geschaffen hat (Globalisierung)
 
 ### Gliederung
 1. Demokratisches <Internet>
 - Was mach Internet demokratisch oder nicht?
 - Dezentralität
--- Ursprüngliche Idee
--- Torrenting
+   - Ursprüngliche Idee
+   - Torrenting
 - Fediverse
 2. Klimaaspekte des Internets
 - Stromverbrauch Datenzentren
@@ -51,7 +52,7 @@
 3. Klimaaspekte des dezentralen Internets
 - Stromfresser Bitcoin
 - CO2-Äquivalent Nachricht im Fediverse
--- Stromverbrauch Mastodon-Server?
+   - Stromverbrauch Mastodon-Server?
 - Vor- und Nachteile Dezentralität
 4. Strom und Klima
 - Klimaneutraler Strom für Datenzentren
