--- a/protokolle/2024-10-16_sitzung.md
+++ b/protokolle/2024-10-16_sitzung.md
@@ -1,4 +1,5 @@
 # Sitzung vom 26.20.2024, 16:00-18:00
+
 ## Roadmap
 1. Termin für Vortrag festlegen
 2. Gliederung für Vortrag
@@ -11,6 +12,7 @@
 - Raum auf Löwencampus bucht @Patrick
 
 ## 2. Gliederung für Vortrag
+
 ### Brainstorming Ideen
 
 - Selbstdarstellung von Unternehmen bzgl. Nachhaltigkeit (@Patrick)
@@ -60,14 +62,37 @@
 5. Fazit
 
 ## 3. Titel für Vortrag
+
 ### Brainstorming Ideen
+
+Untertitel:
 - Ein nachhaltiges, demokratisches Internet
 - Ein demokratisches, nachhaltiges Internet
-- Ein demokratisches und(?) nachhaltiges Internet
+- **Ein demokratisches und(?) nachhaltiges Internet**
 - Demokratisches Internet und Nachhaltigkeit
 - Demokratisches Internet und Klima
 - Klimaaspekte eines demokratischen Internets
 
+Haupttitel:
+- Future Internets
+- Denzentralität for the win?
+- Back to the roots?
+- Die Klimasünden der Daten
+- Der CO2-Ausstoß der Daten
+- Raus aus der Blase
+- Grassroot Servers
+- Digitalisierung = Nachhaltig?
+- **Cloud oder Smog?**
+
 
 ## 4. Aufgabenverteilung
+
+- Präsi gestalten (@Patrick)
+- Strom und Klima (@Riko)
+- Stromverbrauch Fediverse Server (@Kaitlyn)
+- Ursprungsidee Internet dezentral + Open Source + Torrenting (@Patrick)
+- Stromfresser Bitcoin (@David)
+- CO2-Äquivalent Streaming/Nachrichten (@David)
+- Dezentrales/Demokratisches Internet (@Riko, @Patrick)
+- Stromverbrauch dezentrale Dienste, Fediverse (@Alle recherchieren)
 
