--- a/protokolle/2024-10-16_sitzung.md
+++ b/protokolle/2024-10-16_sitzung.md
@@ -1,5 +1,8 @@
 # Sitzung vom 26.20.2024, 16:00-18:00
 
+## Anwesenheit
+Alle (David, Patrick, Emma, Kaitlyn, Riko)
+
 ## Roadmap
 1. Termin für Vortrag festlegen
 2. Gliederung für Vortrag
@@ -9,7 +12,7 @@
 
 ## 1. Termin für Vortrag auf der Klimawoche
 - Einigung auf **6.11.2024, 18:15 - 19:45**
-- Raum auf Löwencampus bucht @Patrick
+- Raum auf Löwencampus bucht @Patrick -> **Sitzungszimmer [Mel]**
 
 ## 2. Gliederung für Vortrag
 
