--- a/protokolle/2024-11-13_sitzung.md
+++ b/protokolle/2024-11-13_sitzung.md
@@ -50,11 +50,11 @@ Zusammenfassend:
       - **TODO (due 20.11.):** Selbstverständnis zu nächster Woche lesen und evtl. Anmerkungen einbringen
     - Branding hinten raus
 - **TODO** 
-  - AG Link schreiben, wegen vernetzung und server infrastruktur die man mitnutzen kann
-  - Leiter des Rechnerzentrums (Ulrich K.) anschreiben, wegen aussortierten Rechnern (Windows Update),
+  - AG Link schreiben, wegen vernetzung und server infrastruktur die man mitnutzen kann (Check)
+  - Leiter des Rechnerzentrums (Ulrich K.) anschreiben, wegen aussortierten Rechnern (Windows Update), (Check)
   - Windpark wegen Strom
   - Vernetzung kritischer Hochschulgruppen -> Anbieten von Infrastruktur
-  - **E-Mail** und Domain bei der Uni beantragen (@Riko)
+  - **E-Mail** und Domain bei der Uni beantragen (@Riko) (Check)
 
 ## Opportunities
 - Experten zusammenbringen, Talks organisieren -> Honorare dafür verwenden
